--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
         <span>O</span>
         <span>L</span>
         <span>A</span>
-        
-        <span>A</span>
-        <span>M</span>
-        <span>O</span>
-        <span>R</span>
+        <span>!</span>
     </div>
     <div class="description">
         <span>Solo quiero desearte Feliz Dia del Amor y la Amistad</span>
